load(
    "//snova:copts/configure_copts.bzl",
    "SNOVA_DEFAULT_COPTS",
    "SNOVA_DEFAULT_LINKOPTS",
)

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "snova",
    srcs = [
        "snova.cc",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    linkopts = SNOVA_DEFAULT_LINKOPTS,
    # malloc = select({
    #     "@bazel_tools//src/conditions:windows": "@bazel_tools//tools/cpp:malloc",
    #     "//conditions:default": "@com_github_microsoft_mimalloc//:libmimalloc",
    # }),
    deps = [
        "//snova/log:log_api",
        "//snova/mux:mux_client",
        "//snova/server:local_server",
        "//snova/server:remote_server",
        "//snova/util:flags",
        "//snova/util:misc_helper",
        "//snova/util:stat",
        "//snova/util:time_wheel",
        "@com_github_CLIUtils_CLI11//:CLI11",
        "@com_google_absl//absl/strings",
    ],
)

# cc_binary(
#     name = "mbedtls",
#     srcs = [
#         "mbedtls.cc",
#     ],
#     copts = SNOVA_DEFAULT_COPTS,
#     linkopts = SNOVA_DEFAULT_LINKOPTS,
#     linkstatic = 1,
#     deps = [
#         "//snova/log:log_api",
#         "@com_github_mbedtls//:mbedtls",
#     ],
# )

# cc_binary(
#     name = "test",
#     srcs = [
#         "test.cc",
#     ],
#     copts = SNOVA_DEFAULT_COPTS,
#     linkopts = SNOVA_DEFAULT_LINKOPTS,
#     deps = [
#         "@asio",
#     ],
# )
