load(
    "//snova:copts/configure_copts.bzl",
    "SNOVA_DEFAULT_COPTS",
    "SNOVA_DEFAULT_LINKOPTS",
)
load("@rules_cc//cc:defs.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "mux_client",
    srcs = [
        "mux_client.cc",
    ],
    hdrs = [
        "mux_client.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":mux_conn_manager",
        "//snova/io",
        "//snova/io:tcp_socket",
        "//snova/io:tls_socket",
        "//snova/io:ws_socket",
        "//snova/log:log_api",
        "//snova/util:address",
        "//snova/util:flags",
        "//snova/util:net_helper",
        "//snova/util:stat",
        "//snova/util:time_wheel",
        "@asio",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "cipher_context",
    srcs = [
        "cipher_context.cc",
    ],
    hdrs = [
        "cipher_context.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":mux_event",
        "//snova/io",
        "//snova/log:log_api",
        "//snova/util:endian",
        # "@com_github_mbedtls//:mbedtls",
    ] + select({
        "@bazel_tools//src/conditions:windows": [
            "@local_windows_borringssl//:headers",
            "@local_windows_borringssl//:ssl",
        ],
        "//conditions:default": [
            "@com_github_google_borringssl//:ssl",
        ],
    }),
)

# cc_test(
#     name = "cipher_context_test",
#     # size = "small",
#     srcs = ["cipher_context_test.cc"],
#     copts = SNOVA_DEFAULT_COPTS,
#     linkopts = SNOVA_DEFAULT_LINKOPTS,
#     deps = [
#         ":cipher_context",
#         "@com_google_googletest//:gtest_main",
#     ],
# )

# cc_test(
#     name = "mux_event_test",
#     # size = "small",
#     srcs = ["mux_event_test.cc"],
#     copts = SNOVA_DEFAULT_COPTS,
#     linkopts = SNOVA_DEFAULT_LINKOPTS,
#     deps = [
#         ":mux_event",
#         "@com_google_googletest//:gtest_main",
#     ],
# )

cc_library(
    name = "mux_event",
    srcs = [
        "mux_event.cc",
        "mux_event.pb.c",
    ],
    hdrs = [
        "mux_event.h",
        "mux_event.pb.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        "//snova/io",
        "//snova/log:log_api",
        "//snova/util:endian",
        "@com_github_nanopb//:nanopb",
    ],
)

cc_library(
    name = "mux_stream",
    srcs = [
        "mux_stream.cc",
    ],
    hdrs = [
        "mux_stream.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":mux_event",
        "//snova/io",
        "//snova/log:log_api",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "mux_connection",
    srcs = [
        "mux_connection.cc",
    ],
    hdrs = [
        "mux_connection.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":cipher_context",
        ":mux_stream",
        "//snova/server:tunnel_server_api",
        "//snova/util:async_mutex",
        "//snova/util:misc_helper",
        "//snova/util:stat",
        "//snova/util:time_wheel",
        "@asio",
    ],
)

cc_library(
    name = "mux_conn_manager",
    srcs = [
        "mux_conn_manager.cc",
    ],
    hdrs = [
        "mux_conn_manager.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":mux_connection",
        "//snova/server:tunnel_server_api",
        "//snova/util:flags",
    ],
)
