load(
    "//snova:copts/configure_copts.bzl",
    "SNOVA_DEFAULT_COPTS",
    "SNOVA_DEFAULT_LINKOPTS",
)

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "local_server",
    srcs = [
        "http.cc",
        "local_server.cc",
        "socks5.cc",
        "tls.cc",
    ],
    hdrs = [
        "local_server.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":local_relay",
        "//snova/io",
        "//snova/log:log_api",
        "//snova/mux:mux_client",
        "//snova/util:net_helper",
        "//snova/util:sni",
        "@asio",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "remote_server",
    srcs = [
        "remote_server.cc",
    ],
    hdrs = [
        "remote_server.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":remote_relay",
        "//snova/io",
        "//snova/log:log_api",
        "//snova/mux:mux_connection",
        "//snova/mux:mux_server",
        "//snova/util:net_helper",
        "@asio",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "local_relay",
    srcs = [
        "local_relay.cc",
    ],
    hdrs = [
        "local_relay.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        "//snova/io:transfer",
        "//snova/log:log_api",
        "//snova/mux:mux_client",
        "@asio",
    ],
)

cc_library(
    name = "remote_relay",
    srcs = [
        "remote_relay.cc",
    ],
    hdrs = [
        "remote_relay.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        "//snova/io",
        "//snova/io:transfer",
        "//snova/log:log_api",
        "//snova/mux:mux_event",
        "//snova/mux:mux_server",
        "//snova/mux:mux_stream",
        "@asio",
    ],
)
