load(
    "//snova:copts/configure_copts.bzl",
    "SNOVA_DEFAULT_COPTS",
    "SNOVA_DEFAULT_LINKOPTS",
)

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "entry_server",
    srcs = [
        "entry_server.cc",
        "http.cc",
        "socks5.cc",
        "tls.cc",
    ],
    hdrs = [
        "entry_server.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":relay",
        "//snova/io",
        "//snova/io:io_util",
        "//snova/log:log_api",
        "//snova/util:address",
        "//snova/util:flags",
        "//snova/util:http_helper",
        "//snova/util:net_helper",
        "//snova/util:sni",
        "@asio",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "mux_server",
    srcs = [
        "mux_server.cc",
    ],
    hdrs = [
        "mux_server.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        ":relay",
        "//snova/io",
        "//snova/io:tcp_socket",
        "//snova/io:ws_socket",
        "//snova/log:log_api",
        "//snova/mux:mux_conn_manager",
        "//snova/mux:mux_connection",
        "//snova/util:net_helper",
        "//snova/util:time_wheel",
        "@asio",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "relay",
    srcs = [
        "relay.cc",
    ],
    hdrs = [
        "relay.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        "//snova/io:transfer",
        "//snova/log:log_api",
        "//snova/mux:mux_client",
        "//snova/mux:mux_event",
        "//snova/util:flags",
        "//snova/util:time_wheel",
        "@asio",
        "@com_google_absl//absl/cleanup",
    ],
)
