load(
    "//snova:copts/configure_copts.bzl",
    "SNOVA_DEFAULT_COPTS",
    "SNOVA_DEFAULT_LINKOPTS",
)

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "net_helper",
    srcs = [
        "net_helper.cc",
    ],
    hdrs = [
        "net_helper.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        "//snova/log:log_api",
        "@asio",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sni",
    srcs = [
        "sni.cc",
    ],
    hdrs = [
        "sni.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        "//snova/log:log_api",
    ],
)

cc_library(
    name = "endian",
    hdrs = [
        "endian.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        "@com_google_absl//absl/base:endian",
    ],
)

cc_library(
    name = "http_helper",
    srcs = [
        "http_helper.cc",
    ],
    hdrs = [
        "http_helper.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "misc_helper",
    srcs = [
        "misc_helper.cc",
    ],
    hdrs = [
        "misc_helper.h",
    ],
    copts = SNOVA_DEFAULT_COPTS,
)
